--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -399,6 +399,8 @@ rampant-arsenal-unhideVanillaDamageTechnologies=Unhide vanilla damage technologi
 
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment uses cells
 
+rampant-arsenal-useInfiniteTechnologies=Enable Infinite Technologies
+
 [mod-setting-description]
 rampant-arsenal-useNonCollidingProjectilesShotgun=Shotgun projectiles no longer collide with entities from the same force
 rampant-arsenal-useNonCollidingProjectilesCannon=Cannon projectiles no longer collide with entities from the same force
@@ -410,6 +412,8 @@ rampant-arsenal-enableAdvancedSolarPanel=Adds an Advanced Solar entity that is t
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment now consumes uranium cells like a normal nuclear reactor
 
 rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies have been replaced with dedicated researches for the various weapon types
+
+rampant-arsenal-useInfiniteTechnologies=Enables the infinite technologies that require space science
 
 [entity-description]
 
