--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,7 @@
 
 [entity-name]
+defender-launched-rampant-arsenal=Defender
+destroyer-launched-rampant-arsenal=Destroyer
 cannon-ammo-turret-rampant-arsenal=Cannon Turret
 gun-ammo-turret-rampant-arsenal=Gun Turret MkII
 rifle-ammo-turret-rampant-arsenal=Rifle Turret
