--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -18,6 +18,8 @@ advanced-beam-electric-turret-rampant-arsenal=Advanced Beam Turret
 
 advanced-accumulator-rampant-arsenal=Advanced Accumulator
 advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
+advanced-lab-rampant-arsenal=Advanced Lab
+large-storage-tank-rampant-arsenal=Large Storage Tank
 
 landmine-ghostless-rampant-arsenal=Land Mine
 he-landmine-rampant-arsenal=High Explosive Landmine
@@ -30,6 +32,7 @@ nuclear-landmine-rampant-arsenal=Nuclear Landmine
 nuclear-landmine-ghostless-rampant-arsenal=Nuclear Landmine
 
 small-repair-cloud-rampant-arsenal=Repair Cloud
+dummy-small-repair-cloud-rampant-arsenal=Repair Cloud
 repair-cloud-rampant-arsenal=Repair Cloud
 paralysis-cloud-rampant-arsenal=Paralysis Cloud
 toxic-cloud-rampant-arsenal=Toxic Cloud
@@ -80,6 +83,8 @@ advanced-car-shotgun-gun-rampant-arsenal=Shotgun
 
 advanced-accumulator-rampant-arsenal=Advanced Accumulator
 advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
+advanced-lab-rampant-arsenal=Advanced Lab
+large-storage-tank-rampant-arsenal=Large Storage Tank
 
 advanced-tank-machine-gun-gun-rampant-arsenal=Minigun
 advanced-tank-cannon-gun-rampant-arsenal=Cannon
@@ -176,6 +181,9 @@ rampant-arsenal-technology-artillery-shell-damage=Artillery Shell Damage Bonus
 
 rampant-arsenal-technology-incendiary-napalm=Advanced Flamethrower Fuel
 rampant-arsenal-technology-boosters=Boosters
+
+rampant-arsenal-technology-advanced-lab=Advanced Lab
+rampant-arsenal-technology-large-storage-tank=Large Storage Tank
 
 rampant-arsenal-technology-he-landmine=High Explosive Landmines
 rampant-arsenal-technology-bio-landmine=Bio Landmines
@@ -309,6 +317,7 @@ rampant-arsenal-technology-artillery-shell-damage=Artillery Shell Damage Bonus
 
 rampant-arsenal-technology-incendiary-napalm=Advanced Flamethrower Fuel
 rampant-arsenal-technology-boosters=Boosters
+rampant-arsenal-technology-advanced-lab=Advanced Lab
 
 rampant-arsenal-technology-he-landmine=High Explosive Landmines
 rampant-arsenal-technology-bio-landmine=Bio Landmines
@@ -396,6 +405,8 @@ rampant-arsenal-enableOilBurner=Enable Oil Based Generator
 rampant-arsenal-enableGunTurretDamageResearch=Enable dedicated gun turret damage research
 rampant-arsenal-enableAdvancedAccumulator=Enable Advanced Accumulator entity
 rampant-arsenal-enableAdvancedSolarPanel=Enable Advanced Solar entity
+rampant-arsenal-enableAdvancedLab=Enable Advanced Lab entity
+rampant-arsenal-enableLargeStorageTank=Enable Large Storage Tank entity
 
 rampant-arsenal-unhideVanillaDamageTechnologies=Unhide vanilla damage technologies
 
@@ -412,6 +423,8 @@ rampant-arsenal-enableGunTurretDamageResearch=Disabling this will cause rifle, g
 rampant-arsenal-enableAdvancedAccumulator=Adds an Advanced Accumulator entity that is the x9 of normal accumulator with 50% better output then 9 small accumulators
 rampant-arsenal-enableAdvancedSolarPanel=Adds an Advanced Solar entity that is the x16 of normal solar panel with 50% better output then 16 small solar panels
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment now consumes uranium cells like a normal nuclear reactor
+rampant-arsenal-enableAdvancedLab=Adds an Advanced Lab entity that is the x16 of normal lab with 50% better output then 16 labs
+rampant-arsenal-enableLargeStorageTank=Adds a Large Storage Tank entity that is the x16 of normal storage tank with 50% better capacity then 16 storage tanks
 
 rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies have been replaced with dedicated researches for the various weapon types
 
