--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,4 +1,3 @@
-
 [entity-name]
 defender-launched-rampant-arsenal=Defender
 destroyer-launched-rampant-arsenal=Destroyer
@@ -20,6 +19,7 @@ advanced-accumulator-rampant-arsenal=Advanced Accumulator
 advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
 advanced-lab-rampant-arsenal=Advanced Lab
 large-storage-tank-rampant-arsenal=Large Storage Tank
+air-filter-rampant-arsenal=Air Filter
 
 landmine-ghostless-rampant-arsenal=Land Mine
 he-landmine-rampant-arsenal=High Explosive Landmine
@@ -77,6 +77,8 @@ speed-capsule-rampant-arsenal=Speed Booster Capsule
 healing-capsule-rampant-arsenal=Health Capsule
 mortar-gun-rampant-arsenal=Mortar
 rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
+
+air-filter-rampant-arsenal=Air Filter
 
 advanced-car-machine-gun-gun-rampant-arsenal=Minigun
 advanced-car-shotgun-gun-rampant-arsenal=Shotgun
@@ -153,12 +155,15 @@ toxic-capsule-rampant-arsenal=Toxic Capsule
 repair-capsule-rampant-arsenal=Repair Capsule
 
 [recipe-name]
+air-filter-pollution-rampant-arsenal=Clean Air
 
 [damage-type-name]
 healing=Healing
 
 [fluid-name]
 napalm-fluid-rampant-arsenal=Napalm
+pollution-fluid-rampant-arsenal=Pollution
+compressed-pollution-fluid-rampant-arsenal=Toxic Sludge
 
 [technology-name]
 rampant-arsenal-technology-capsule-turret=Capsule Turrets
@@ -398,16 +403,13 @@ rampant-arsenal-technology-solar-energy=Solar Energy
 rampant-arsenal-technology-electric-energy-accumulators=Electric Energy Accumulators
 
 [mod-setting-name]
-rampant-arsenal-useNonCollidingProjectilesShotgun=Use non colliding shotgun projectiles
-rampant-arsenal-useNonCollidingProjectilesLaser=Use non colliding laser projectiles
-rampant-arsenal-useNonCollidingProjectilesCannon=Use non colliding cannon projectiles
 rampant-arsenal-enableOilBurner=Enable Oil Based Generator
 rampant-arsenal-enableGunTurretDamageResearch=Enable dedicated gun turret damage research
 rampant-arsenal-enableAdvancedAccumulator=Enable Advanced Accumulator entity
 rampant-arsenal-enableAdvancedSolarPanel=Enable Advanced Solar entity
 rampant-arsenal-enableAdvancedLab=Enable Advanced Lab entity
 rampant-arsenal-enableLargeStorageTank=Enable Large Storage Tank entity
-
+rampant-arsenal-airFilterCooldown=Air Filter Absorption Interval (Ticks)
 rampant-arsenal-unhideVanillaDamageTechnologies=Unhide vanilla damage technologies
 
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment uses cells
@@ -415,9 +417,7 @@ rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equip
 rampant-arsenal-useInfiniteTechnologies=Enable Infinite Technologies
 
 [mod-setting-description]
-rampant-arsenal-useNonCollidingProjectilesShotgun=Shotgun projectiles no longer collide with entities from the same force
-rampant-arsenal-useNonCollidingProjectilesCannon=Cannon projectiles no longer collide with entities from the same force
-rampant-arsenal-useNonCollidingProjectilesLaser=Laser projectiles no longer collide with entities from the same force, This only affects the Advanced Laser currently.
+rampant-arsenal-airFilterCooldown=The time in ticks that will pass before pollution will be inserted into a rampant air filter
 rampant-arsenal-enableOilBurner=A generator that uses fluids with a fuel value. Disabling this will also cause this mod to not add fluid fuel values to existing fluids.
 rampant-arsenal-enableGunTurretDamageResearch=Disabling this will cause rifle, gun, gun mk2 turrets to be on the standard physical projectile tech bonus research instead of a dedicated research for gun turret damage bonus.
 rampant-arsenal-enableAdvancedAccumulator=Adds an Advanced Accumulator entity that is the x9 of normal accumulator with 50% better output then 9 small accumulators
@@ -431,6 +431,7 @@ rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies 
 rampant-arsenal-useInfiniteTechnologies=Enables the infinite technologies that require space science
 
 [entity-description]
+air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.
 
 [ammo-category-name]
 capsule-launcher=Launcher Ammo
