partial needs recipes and pollution on remove/destroy

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -20,6 +20,7 @@ advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
 advanced-lab-rampant-arsenal=Advanced Lab
 large-storage-tank-rampant-arsenal=Large Storage Tank
 air-filter-rampant-arsenal=Air Filter
+air-filter-2-rampant-arsenal=Air Filter 2
 
 landmine-ghostless-rampant-arsenal=Land Mine
 he-landmine-rampant-arsenal=High Explosive Landmine
@@ -79,6 +80,7 @@ mortar-gun-rampant-arsenal=Mortar
 rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
 
 air-filter-rampant-arsenal=Air Filter
+air-filter-2-rampant-arsenal=Air Filter 2
 
 advanced-car-machine-gun-gun-rampant-arsenal=Minigun
 advanced-car-shotgun-gun-rampant-arsenal=Shotgun
@@ -431,7 +433,8 @@ rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies 
 rampant-arsenal-useInfiniteTechnologies=Enables the infinite technologies that require space science
 
 [entity-description]
-air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.
+air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed will emit the pollution contained within.
+air-filter-2-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed will emit the pollution contained within.
 
 [ammo-category-name]
 capsule-launcher=Launcher Ammo
