--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -14,6 +14,7 @@ shotgun-ammo-turret-rampant-arsenal=Shotgun Turret
 advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
 lightning-electric-turret-rampant-arsenal=Lightning Turret
 advanced-beam-electric-turret-rampant-arsenal=Advanced Beam Turret
+acid-cannon-rampant-arsenal=Acid Thrower Turret
 
 advanced-accumulator-rampant-arsenal=Advanced Accumulator
 advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
@@ -78,6 +79,8 @@ speed-capsule-rampant-arsenal=Speed Booster Capsule
 healing-capsule-rampant-arsenal=Health Capsule
 mortar-gun-rampant-arsenal=Mortar
 rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
+
+acid-cannon-rampant-arsenal=Acid Thrower Turret
 
 air-filter-rampant-arsenal=Air Filter
 air-filter-2-rampant-arsenal=Air Filter 2
@@ -158,6 +161,7 @@ repair-capsule-rampant-arsenal=Repair Capsule
 
 [recipe-name]
 air-filter-pollution-rampant-arsenal=Clean Air
+acid-cannon-rampant-arsenal=Acid Thrower Turret
 
 [damage-type-name]
 healing=Healing
@@ -285,6 +289,7 @@ slow-passive-defense-rampant-arsenal=Personal Slowdown Defense
 
 [modifier-description]
 capsule-launcher-shooting-speed-bonus=Capsule Launcher Shooting Speed: +__1__
+acid-cannon-rampant-arsenal-attack-bonus=Acid Thrower Damage Bonus: +__1__
 cannon-ammo-turret-rampant-arsenal-attack-bonus=Cannon Turret Damage Bonus: +__1__
 shotgun-ammo-turret-rampant-arsenal-attack-bonus=Shotgun Turret Damage Bonus: +__1__
 rocket-ammo-turret-rampant-arsenal-attack-bonus=Rocket Turret Damage Bonus: +__1__
