--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -38,6 +38,7 @@ dummy-small-repair-cloud-rampant-arsenal=Repair Cloud
 repair-cloud-rampant-arsenal=Repair Cloud
 paralysis-cloud-rampant-arsenal=Paralysis Cloud
 toxic-cloud-rampant-arsenal=Toxic Cloud
+small-toxic-cloud-rampant-arsenal=Toxic Cloud
 massive-fire-cloud-rampant-arsenal=Fire Cloud
 massive-repair-cloud-rampant-arsenal=Repair Cloud
 
@@ -417,11 +418,15 @@ rampant-arsenal-enableAdvancedSolarPanel=Enable Advanced Solar entity
 rampant-arsenal-enableAdvancedLab=Enable Advanced Lab entity
 rampant-arsenal-enableLargeStorageTank=Enable Large Storage Tank entity
 rampant-arsenal-airFilterCooldown=Air Filter Absorption Interval (Ticks)
-rampant-arsenal-unhideVanillaDamageTechnologies=Unhide vanilla damage technologies
+rampant-arsenal-hideVanillaDamageTechnologies=Hide vanilla damage technologies
 
 rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equipment uses cells
 
 rampant-arsenal-useInfiniteTechnologies=Enable Infinite Technologies
+rampant-arsenal-enableAmmoTypes=Enable Additional Ammo Types
+rampant-arsenal-enableVehicle=Enable Vehicles
+rampant-arsenal-enableRifleTurret=Enable Rifle Turret
+rampant-arsenal-enableEquipment=Enable Equipment
 
 [mod-setting-description]
 rampant-arsenal-airFilterCooldown=The time in ticks that will pass before pollution will be inserted into a rampant air filter
@@ -433,13 +438,17 @@ rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equip
 rampant-arsenal-enableAdvancedLab=Adds an Advanced Lab entity that is the x16 of normal lab with 50% better output then 16 labs
 rampant-arsenal-enableLargeStorageTank=Adds a Large Storage Tank entity that is the x16 of normal storage tank with 50% better capacity then 16 storage tanks
 
-rampant-arsenal-unhideVanillaDamageTechnologies=The vanilla damage technologies have been replaced with dedicated researches for the various weapon types
+rampant-arsenal-hideVanillaDamageTechnologies=The vanilla damage technologies have been replaced with dedicated researches for the various weapon types
 
 rampant-arsenal-useInfiniteTechnologies=Enables the infinite technologies that require space science
+rampant-arsenal-enableAmmoTypes=Enable Additional Ammo Types
+rampant-arsenal-enableVehicle=Enable Vehicles
+rampant-arsenal-enableRifleTurret=Enable Rifle Turret
+rampant-arsenal-enableEquipment=Enable Equipment
 
 [entity-description]
-air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed will emit the pollution contained within.
-air-filter-2-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed will emit the pollution contained within.
+air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed emit the pollution contained within.
+air-filter-2-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed emit the pollution contained within.
 
 [ammo-category-name]
 capsule-launcher=Launcher Ammo
