--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -170,7 +170,7 @@ healing=Healing
 [fluid-name]
 napalm-fluid-rampant-arsenal=Napalm
 pollution-fluid-rampant-arsenal=Pollution
-compressed-pollution-fluid-rampant-arsenal=Toxic Sludge
+# compressed-pollution-fluid-rampant-arsenal=Toxic Sludge
 
 [technology-name]
 rampant-arsenal-technology-capsule-turret=Capsule Turrets
@@ -447,8 +447,8 @@ rampant-arsenal-enableRifleTurret=Enable Rifle Turret
 rampant-arsenal-enableEquipment=Enable Equipment
 
 [entity-description]
-air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed emit the pollution contained within.
-air-filter-2-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.\nAny entities with toxic sludge in them will when mined or destoryed emit the pollution contained within.
+air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.
+air-filter-2-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.
 
 [ammo-category-name]
 capsule-launcher=Launcher Ammo
