Update [modifier-description] in locale ru
Fixed a bug due to which the bonus was incorrectly displayed in the description of the technology in Russian.

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -283,24 +283,24 @@ bullets-passive-defense-rampant-arsenal=Личная Защита От Пуль
 slow-passive-defense-rampant-arsenal=Личная Защита От Замедления Роста
 
 [modifier-description]
-capsule-launcher-shooting-speed-bonus=Скорость Стрельбы Капсульной Пусковой Установки: +_ _ 1__
-cannon-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону Орудийной Башни: +_ _ 1__
-shotgun-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Повреждению Башни Дробовика: +_
-rocket-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Ракетной Башни: +_ _ 1
-rapid-rocket-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Быстрой Ракетной Башни: +_ _ 1__
-suppression-cannon-fluid-turret-rampant-arsenal-attack-bonus=Продвинутый Бонус К Урону Башни Огнемета: +_ _ 1__
-rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Быстрый Бонус Урона Орудийной Башни: +_ _ 1__
-landmine-damage-bonus=Бонус К Урону От Мины: +_ _ 1__
-artillery-turret-attack-bonus=Бонус К Урону Артиллерийской Башни: +_ _ 1__
-gun-ammo-turret-rampant-arsenal-attack-bonus=Орудийная Башня MkII Бонус К Урону Башни: +_ _ 1__
-rifle-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Башни Винтовки: +_ _ 1__
-capsule-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Пусковой Установки Капсулы: +_ _ 1__
-medic-ammo-turret-rampant-arsenal-attack-bonus=Бонус За Ремонт Башни Медика: +_ _ 1__
-artillery-wagon-attack-bonus=Бонус К Урону Башни Артиллерийского Вагона: +_ _ 1__
-artillery-shell-damage-bonus=Бонус К Урону От Артиллерийского Снаряда: +_ _ 1__
-capsule-launcher-damage-bonus=Бонус К Урону От Боеприпасов Пусковой Установки: +_ _ 1__
-turret-capsule-damage-bonus=Бонус К Ремонту Боеприпасов Медика: +_ _ 1__
-character-health-bonus=Бонус Здоровья Персонажа: +_ _ 1__
+capsule-launcher-shooting-speed-bonus=Скорость Стрельбы Капсульной Пусковой Установки: +__1__
+cannon-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону Орудийной Башни: +__1__
+shotgun-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Повреждению Башни Дробовика: +__1__
+rocket-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Ракетной Башни: +__1__
+rapid-rocket-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Быстрой Ракетной Башни: +__1__
+suppression-cannon-fluid-turret-rampant-arsenal-attack-bonus=Продвинутый Бонус К Урону Башни Огнемета: +__1__
+rapid-cannon-ammo-turret-rampant-arsenal-attack-bonus=Быстрый Бонус Урона Орудийной Башни: +__1__
+landmine-damage-bonus=Бонус К Урону От Мины: +__1__
+artillery-turret-attack-bonus=Бонус К Урону Артиллерийской Башни: +__1__
+gun-ammo-turret-rampant-arsenal-attack-bonus=Орудийная Башня MkII Бонус К Урону Башни: +__1__
+rifle-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Башни Винтовки: +__1__
+capsule-ammo-turret-rampant-arsenal-attack-bonus=Бонус К Урону От Пусковой Установки Капсулы: +__1__
+medic-ammo-turret-rampant-arsenal-attack-bonus=Бонус За Ремонт Башни Медика: +__1__
+artillery-wagon-attack-bonus=Бонус К Урону Башни Артиллерийского Вагона: +__1__
+artillery-shell-damage-bonus=Бонус К Урону От Артиллерийского Снаряда: +__1__
+capsule-launcher-damage-bonus=Бонус К Урону От Боеприпасов Пусковой Установки: +__1__
+turret-capsule-damage-bonus=Бонус К Ремонту Боеприпасов Медика: +__1__
+character-health-bonus=Бонус Здоровья Персонажа: +__1__
 
 [technology-description]
 rampant-arsenal-technology-capsule-turret=Капсульные Башни
