Setting for Changing Nuclear Fuel Stack Size

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -425,6 +425,7 @@ rampant-arsenal-enableNuclearGeneratorEquipmentConsuming=Nuclear Generator Equip
 rampant-arsenal-useInfiniteTechnologies=Enable Infinite Technologies
 rampant-arsenal-enableAmmoTypes=Enable Additional Ammo Types
 rampant-arsenal-enableVehicle=Enable Vehicles
+rampant-arsenal-enableVehicleNuclearFuelStackSize=Nuclear Fuel Stacks to 10 (Vehicles must be enabled)
 rampant-arsenal-enableRifleTurret=Enable Rifle Turret
 rampant-arsenal-enableEquipment=Enable Equipment
 
@@ -443,8 +444,10 @@ rampant-arsenal-hideVanillaDamageTechnologies=The vanilla damage technologies ha
 rampant-arsenal-useInfiniteTechnologies=Enables the infinite technologies that require space science
 rampant-arsenal-enableAmmoTypes=Enable Additional Ammo Types
 rampant-arsenal-enableVehicle=Enable Vehicles
+rampant-arsenal-enableVehicleNuclearFuelStackSize=Nuclear Fuel Stacks to 10 (Vehicles must be enabled)
 rampant-arsenal-enableRifleTurret=Enable Rifle Turret
 rampant-arsenal-enableEquipment=Enable Equipment
+
 
 [entity-description]
 air-filter-rampant-arsenal=Air Filter will check for pollution on the chunk and if the Air Filter has more than 65% power will gain some pollution to process.
