--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -15,6 +15,7 @@ advanced-laser-electric-turret-rampant-arsenal=Advanced Laser Turret
 lightning-electric-turret-rampant-arsenal=Lightning Turret
 advanced-beam-electric-turret-rampant-arsenal=Advanced Beam Turret
 acid-cannon-rampant-arsenal=Acid Thrower Turret
+lite-artillery-turret-rampant-arsenal=Light Artillery
 
 advanced-accumulator-rampant-arsenal=Advanced Accumulator
 advanced-solar-panel-rampant-arsenal=Advanced Solar Panel
@@ -64,6 +65,7 @@ reinforced-wall-rampant-arsenal=Reinforced Wall
 reinforced-gate-rampant-arsenal=Reinforced Gate
 
 [item-description]
+artillery-targeting-remote-rampant-arsenal=Allows firing light artillery manually from the map or world.
 
 [item-name]
 distractor-capsule-ammo-rampant-arsenal=Distractor Launcher Ammo
@@ -80,6 +82,9 @@ speed-capsule-rampant-arsenal=Speed Booster Capsule
 healing-capsule-rampant-arsenal=Health Capsule
 mortar-gun-rampant-arsenal=Mortar
 rocket-launcher-gun-rampant-arsenal=Rocket Launcher MkII
+lite-artillery-turret-rampant-arsenal=Light Artillery
+
+artillery-targeting-remote-rampant-arsenal=Light Artillery Targeting Remote
 
 acid-cannon-rampant-arsenal=Acid Thrower Turret
 
@@ -163,6 +168,7 @@ repair-capsule-rampant-arsenal=Repair Capsule
 [recipe-name]
 air-filter-pollution-rampant-arsenal=Clean Air
 acid-cannon-rampant-arsenal=Acid Thrower Turret
+lite-artillery-turret-rampant-arsenal=Light Artillery
 
 [damage-type-name]
 healing=Healing
@@ -181,6 +187,8 @@ rampant-arsenal-technology-lightning=Lightning Turrets
 rampant-arsenal-technology-rocket-turret=Rocket Turrets
 rampant-arsenal-technology-shotgun=Shotgun Turrets
 rampant-arsenal-technology-rapid-rocket-turret=Rapid Rocket Turrets
+
+rampant-arsenal-technology-lite-artillery=Light Artillery
 
 rampant-arsenal-technology-capsule-turret-speed=Capsule Turret Shooting Speed
 rampant-arsenal-technology-capsule-turret-damage=Capsule Turret Damage Bonus
@@ -318,6 +326,8 @@ rampant-arsenal-technology-lightning=Lightning Turrets
 rampant-arsenal-technology-rocket-turret=Rocket Turrets
 rampant-arsenal-technology-shotgun=Shotgun Turrets
 rampant-arsenal-technology-rapid-rocket-turret=Rapid Rocket Turrets
+
+rampant-arsenal-technology-rampant-arsenal=Light Artillery
 
 rampant-arsenal-technology-capsule-turret-speed=Capsule Turret Shooting Speed
 rampant-arsenal-technology-capsule-turret-damage=Capsule Turret Damage Bonus
