--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,4 +1,6 @@
 [entity-name]
+massive-fire-rampant-arsenal=Fire
+# big-toxic-fire-cloud-rampant-arsenal=Toxic Cloud
 defender-launched-rampant-arsenal=Defender
 destroyer-launched-rampant-arsenal=Destroyer
 cannon-ammo-turret-rampant-arsenal=Cannon Turret
