fixed chinese locale

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -65,7 +65,7 @@ reinforced-wall-rampant-arsenal=钢筋墙
 reinforced-gate-rampant-arsenal=钢筋闸门
 
 [item-description]
-artillery-targeting-remote-rampant-arsenal=允许从地图或世界手动发射轻型火炮。
+artillery-targeting-remote-rampant-arsenal=允许从地图或世界手动发射轻型火炮
 
 distractor-capsule-ammo-rampant-arsenal=掩护无人机胶囊(发射器弹药)
 destroyer-capsule-ammo-rampant-arsenal=进攻无人机胶囊(发射器弹药)
@@ -83,7 +83,7 @@ mortar-gun-rampant-arsenal=榴弹发射器
 rocket-launcher-gun-rampant-arsenal=火箭筒 MK2
 lite-artillery-turret-rampant-arsenal=轻型火炮
 
-artillery-targeting-remote-rampant-arsenal=轻型火炮瞄准遥控器
+# artillery-targeting-remote-rampant-arsenal=轻型火炮瞄准遥控器
 
 acid-cannon-rampant-arsenal=腐蚀炮塔
 
