Update KO locale

--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -1,6 +1,7 @@
 [entity-name]
 massive-fire-rampant-arsenal=불
-# big-toxic-fire-cloud-rampant-arsenal=유독성 구름
+
+big-toxic-launcher-cloud-rampant-arsenal=유독성 구름
 defender-launched-rampant-arsenal=방어 로봇
 destroyer-launched-rampant-arsenal=파괴 로봇
 cannon-ammo-turret-rampant-arsenal=캐논 포탑
@@ -178,7 +179,7 @@ healing=회복
 [fluid-name]
 napalm-fluid-rampant-arsenal=네이팜
 pollution-fluid-rampant-arsenal=공해
-# compressed-pollution-fluid-rampant-arsenal=유독성 슬러지
+
 
 [technology-name]
 rampant-arsenal-technology-capsule-turret=캡슐 포탑
