RU locale update for Rampant Arsenal v1.1.5

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -1,4 +1,7 @@
 [entity-name]
+massive-fire-rampant-arsenal=Огонь
+# big-toxic-fire-cloud-rampant-arsenal=Ядовитое облако
+big-toxic-launcher-cloud-rampant-arsenal=Ядовитое облако
 defender-launched-rampant-arsenal=Защитник
 destroyer-launched-rampant-arsenal=Разрушитель
 cannon-ammo-turret-rampant-arsenal=Турель с пушкой
@@ -35,15 +38,15 @@ small-repair-cloud-rampant-arsenal=Ремонтное облако
 dummy-small-repair-cloud-rampant-arsenal=Ремонтное облако
 repair-cloud-rampant-arsenal=Ремонтное облако
 paralysis-cloud-rampant-arsenal=Парализующее облако
-toxic-cloud-rampant-arsenal=Токсичное облако
-small-toxic-cloud-rampant-arsenal=Токсичное облако
+toxic-cloud-rampant-arsenal=Ядовитое облако
+small-toxic-cloud-rampant-arsenal=Ядовитое облако
 massive-fire-cloud-rampant-arsenal=Огненное облако
 massive-repair-cloud-rampant-arsenal=Ремонтное облако
 mending-wall-rampant-arsenal=Стена с саморемонтом
 mending-gate-rampant-arsenal=Ворота с саморемонтом
 big-repair-cloud-rampant-arsenal=Ремонтное облако
 big-paralysis-cloud-rampant-arsenal=Парализующее облако
-big-toxic-cloud-rampant-arsenal=Токсичное облако
+big-toxic-cloud-rampant-arsenal=Ядовитое облако
 big-poison-cloud-rampant-arsenal=Ядовитое облако
 nuclear-car-vehicle-rampant-arsenal=Ядерный автомобиль
 advanced-car-vehicle-rampant-arsenal=Продвинутый автомобиль
